dia 11 de outubro

--- a/index.html
+++ b/index.html
@@ -9,8 +9,30 @@
     </head>
 </html>
 <body>
-    <header class="cabecalho">
-        <div class="container">
+            <header class="cabecalho">
+                <div class="container">
+                    <input type="checkbox" id="menu" class="container_botao">
+                    <label for="menu">
+                    <span class="cabecalho_menu-hamburguer container-imagem"></span>
+                </label>
+                <ul class="lista-menu">
+                    <li class="lista-menu_titulo"> Categorias</li>
+                    <li class="lista-menu_item">
+                        <a href="#" class="lista-menu_link"> Programação</a>
+                    </li>
+                    <li class="lista-menu_item">
+                        <a href="#" class="lista-menu_link"> Front-end</a>
+                    </li>
+                    <li class="lista-menu_item">
+                        <a href="#" class="lista-menu_link">Infraestrutura</a>
+                    </li>
+                    <li class="lista-menu_item">
+                        <a href="#" class="lista-menu_link"> Business</a>
+                    </li>
+                    <li class="lista-menu_item">
+                        <a href="#" class="lista-menu_link"> Design & UX</a>
+                    </li>
+                </ul>
             <span class="cabecalho_menu-hamburguer container-imagem"></span>
             <img src="Frame 143.png" alt="Logo da AluraBooks" class="container-imagem">
         </div>
