--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
             <header class="cabecalho">
                 <div class="container">
-                    <input type="checkbox" id="menu" class="container_botao">
+                    <input type="checkbox" id="menu" class="container__botao">
                     <label for="menu">
-                    <span class="cabecalho_menu-hamburguer container-imagem"></span>
+                    <span class="cabecalho__menu hamburguer container__imagem"></span>
                 </label>
                 <ul class="lista-menu">
                     <li class="lista-menu_titulo"> Categorias</li>
@@ -33,7 +33,6 @@
                         <a href="#" class="lista-menu_link"> Design & UX</a>
                     </li>
                 </ul>
-            <span class="cabecalho_menu-hamburguer container-imagem"></span>
             <img src="Frame 143.png" alt="Logo da AluraBooks" class="container-imagem">
         </div>
         <div class="container">
